# beijing-open-data-enterprise-risk

./: .gitignore  README.md  pyproject.toml  requirements.txt
dataset/: 12315绿色通道.csv  19开发区行政处罚信息-环境保护领域-固定源一般程序行政处罚情况xlsx.csv  19经开区产值增长奖励拟支持企业名单.csv  2019年平谷区高新技术企业名单.csv  2021年企业研发机构专项奖励拟支持企业名单.csv  2021年北京市新时代文明实践基层科普行动（科普惠农兴村计划）资助项目公示名单.csv  2021年度北京经济技术开发区科技成果专项奖励政策拟支持企业名单.csv  2021年度绿色发展资金拟支持项目（首批）名单.csv  2022已通过过期施工现场备案.csv  2022年中小企业优秀技术成果转化培育项目拟支持项目公示名单.csv  2022年丰台区环境信息依法披露企业名单.csv  2022年北京市知识产权示范单位名单.csv  2022年北京市知识产权试点单位名单.csv  2022年备案项目基本情况表.csv  2022年度北京经济技术开发区消防安全重点单位名录.csv  2022年度开发区和谐劳动关系创建示范企业名单.csv  2022年延庆区应急管理局市场监管领域“部门内部”双随机抽查结果.csv  2023年中国创新方法大赛北京赛区决赛获奖名单.csv  2023年北京市科协“千人进千企”助推计划项目支持名单.csv  2023年北京市科协金桥工程种子资金支持项目名单.csv  2023年顺义区高新技术企业名单.csv  22开发区建设工程质量双随机抽查结果xlsx.csv  39第四批北京市中小企业公共服务示范平台拟认定名单（经开区).csv  67规划和自然资源违法案件行政处罚信息.csv  86建设工程规划许可证.csv  README.md  “北京优农”品牌目录.csv  上市企业名单（经开区）.csv  不正当竞争类司法判例数据.csv  东城区专精特新中小企业名单汇总信息.csv  东城区创新型中小企业名单汇总信息.csv  东城区科技型中小企业名单汇总信息（2022年度）(1).csv  东城园国家高新技术企业名单.csv  东城园国高新企业名单.csv  中关村上市公司名单.csv  中关村新三板企业名单.csv  中关村海外人才创业园名单.csv  中关村科技园区海淀园企业博士后科研工作站分站名单.csv  中关村科技型小微企业支持项目信息.csv  中关村高新技术企业名单.csv  (+275 more)
docs/: pipeline.md
output/: README.md  test.xlsx  仅记录文件名_信用红黑名单.json  未匹配文件列表.json  目录清单.xlsx  目录清单_分类结果.xlsx  目录清单_分类结果_人工过筛.xlsx  目录清单_分类结果_人工过筛_bak_20260324_edited.xlsx
scripts/: batch_downloader.py  build_entity_profile_one_pass.py  enterprise_kyc_classifier.py
scripts_non9/: build_entity_profile_one_pass.py  dataset_freshness_and_filename_updater.py  enterprise_kyc_classifier.py  prune_columns.py
(+6 files in other folders)
